template base design done

--- a/index.html
+++ b/index.html
@@ -22,14 +22,21 @@
 				</ul>
 			</div>
 			<div class="phone-email">
-				<span>+00 (123) 456 7890</span>|
+				<span>+00 (123) 456 7890 |</span>
 				<span>INFO@DOMAIN.COM</span>
 			</div>
 		</div>
 		<header>
-			<div class="header-bg"></div>
+			<div class="header-bg">
+				<img
+					src="images/flomic.png"
+					alt="flomic background"
+				/>
+			</div>
 			<div class="header-links">
+				<a href="#">HOME</a>
 				<select name="pages">
+					<option value="Pages">Pages</option>
 					<option value="Page 1">Page 1</option>
 					<option value="Page 2">Page 2</option>
 					<option value="Page 3">Page 3</option>
@@ -37,136 +44,201 @@
 					<option value="Page 5">Page 5</option>
 				</select>
 				<select name="dropdown">
+					<option value="dropdown">Dropdown</option>
 					<option value="dropdown 1">Dropdown 1</option>
 					<option value="dropdown 2">Dropdown 2</option>
 					<option value="dropdown 3">Dropdown 3</option>
 					<option value="dropdown 4">Dropdown 4</option>
 					<option value="dropdown 5">Dropdown 5</option>
 				</select>
-				<ul>
-					<li>LINK TEXT</li>
-					<li>LINK TEXT</li>
-				</ul>
+
+				<a href="#">LINK TEXT</a>
+				<a href="#">LINK TEXT</a>
 			</div>
 		</header>
 		<main>
 			<section class="card1">
-				<article class="card1-card-art">
+				<article class="card1-head">
 					<h3>Lorem ipsum dolor sit.</h3>
 				</article>
-				<article class="card1-card-art">
-					Lorem ipsum dolor sit amet consectetur adipisicing
-					elit. Nobis in nesciunt tempora repudiandae
-					molestiae dolor libero ex ad at sunt?
+				<article class="card1-body">
+					<p>
+						Lorem ipsum dolor sit amet consectetur
+						adipisicing elit. Nobis in nesciunt tempora
+						repudiandae molestiae dolor libero ex ad at
+						sunt?
+					</p>
 				</article>
-				<article class="card1-card-art">
-					Read More >>
-				</article>
-                <section class="card2">
-				<article class="card2-card-art">
+				<article class="card1-rd">Read More >></article>
+			</section>
+			<section class="card2">
+				<article class="card2-head">
 					<h3>Lorem ipsum dolor sit amet.</h3>
 				</article>
-				<article class="card2-card-art">
-					Lorem ipsum dolor sit amet consectetur adipisicing
-					elit. Nobis in nesciunt tempora repudiandae
-					molestiae dolor libero ex ad at sunt?
+				<article class="card2-body">
+					<p>
+						Lorem ipsum dolor sit amet consectetur
+						adipisicing elit. Nobis in nesciunt tempora
+						repudiandae molestiae dolor libero ex ad at
+						sunt?
+					</p>
 				</article>
-				<article class="card2-card-art">
-					Read More >>
+				<article class="card2-rd">Read More >></article>
+			</section>
+			<section class="card3">
+				<article class="card3-head">
+					<h3>Lorem ipsum dolor sit amet consectetur.</h3>
 				</article>
-                <section class="card3">
-				<article class="card3-card-art">
-				<h3>Lorem ipsum dolor sit amet consectetur.</h3>	
+				<article class="card3-body">
+					<p>
+						Lorem ipsum dolor sit amet consectetur
+						adipisicing elit. Nobis in nesciunt tempora
+						repudiandae molestiae dolor libero ex ad at
+						sunt?
+					</p>
 				</article>
-				<article class="card3-card-art">
-					Lorem ipsum dolor sit amet consectetur adipisicing
-					elit. Nobis in nesciunt tempora repudiandae
-					molestiae dolor libero ex ad at sunt?
-				</article>
-				<article class="card3-card-art">
-					Read More >>
-				</article>
+				<article class="card3-rd">Read More >></article>
 			</section>
 		</main>
-        <section class="sect-1">
-            <article class="sect-1-col1">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <section class="sect-1-col1card">
-                    <div class="sect1-innerdiv">
-                        <h3>Lorem ipsum dolor sit.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, ex!</p>
-                        <button>Read More >></button>
-                    </div>
+		<section class="sect-1">
+			<article class="sect-1-col1">
+				<h3>Lorem ipsum dolor sit amet.</h3>
+				<section class="sect-1-col1card">
+					<div class="sect1-innerdiv">
+						<h3>Lorem ipsum dolor sit.</h3>
+						<p>
+							Lorem ipsum dolor sit amet consectetur
+							adipisicing elit. Repellendus, ex!
+						</p>
+						<a href="#">Read More >></a>
+					</div>
 				</section>
 			</article>
-            <article class="sect-1-col2"> 
-                <h3>Lorem ipsum dolor sit amet.</h3>
+			<article class="sect-1-col2">
+				<h3>Lorem ipsum dolor sit amet.</h3>
 
-                    <div class="sect-1-col2-part1">
-                        <div class="part1-col1"></div>
-                            <div class="part1-col2">
-                            <h3>Lorem ipsum dolor sit.</h3>
-                            <span>By A Name</span> <span>Friday, 6 April 2045</span>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, obcaecati!.....</p>
-                            <button>Read More >></button>
-                        </div>
-                    </div>
-                    <div class="sect-1-col2-part2">
-                        <div class="part2-col1"></div>
-                        <div class="part2-col2">
-                            <h3>Lorem ipsum dolor sit.</h3>
-                            <span>By A Name</span> <span>Friday, 6 April 2045</span>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, obcaecati!.....</p>
-                        <button>Read More >></button>
-                        </div>
-                    </div>
-                    <div class="sect-1-col2-part3">
-                        <div class="part3-col1"></div>
-                        <div class="part3-col2">
-                        <h3>Lorem ipsum dolor sit.</h3>
-                            <span>By A Name</span> <span>Friday, 6 April 2045 </span>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, obcaecati!.....</p>
-                            <button>Read More >></button>
-                        </div>
-                    </div>
-            </article>
-        </section>
-		<section class="sect-2">
-			<h2>Lorem ipsum dolor sit amet consectetur.</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia laudantium praesentium ut, adipisci velit est?</p>
-
-			<article class="sect-2-col1">
-				<div class="sect-2-col-plimg"></div>
-				<div class="sect-2-col1txt">
-					<h4>Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
-					<button>Read More >></button>
+				<div class="sect-1-col2-part1">
+					<div class="part1-col1">
+						<img
+							src="images/article-img-1.jpg"
+							alt=""
+							width="170"
+							height="104"
+						/>
+					</div>
+					<div class="part1-col2">
+						<h3>Lorem ipsum dolor sit.</h3>
+						<span>By A Name</span>
+						<span>Friday, 6 April 2045</span>
+						<p>
+							Lorem ipsum dolor sit amet consectetur,
+							adipisicing elit. Exercitationem,
+							obcaecati!.....
+						</p>
+						<a href="#">Read More >></a>
+					</div>
 				</div>
-			</article>
-				<article class="sect-2-col2">
-				<div class="sect-2-col-plimg"></div>
-				<div class="sect-2-col2txt">
-					<h4>Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
-					<button>Read More >></button>
+
+				<div class="sect-1-col2-part2">
+					<div class="part2-col1">
+						<img
+							src="images/article-img-1.jpg"
+							alt=""
+							width="170"
+							height="104"
+						/>
+					</div>
+					<div class="part2-col2">
+						<h3>Lorem ipsum dolor sit.</h3>
+						<span>By A Name</span>
+						<span>Friday, 6 April 2045</span>
+						<p>
+							Lorem ipsum dolor sit amet consectetur,
+							adipisicing elit. Exercitationem,
+							obcaecati!.....
+						</p>
+						<a href="#">Read More >></a>
+					</div>
+				</div>
+
+				<div class="sect-1-col2-part3">
+					<div class="part3-col1">
+						<img
+							src="images/article-img-1.jpg"
+							alt=""
+							width="170"
+							height="104"
+						/>
+					</div>
+					<div class="part3-col2">
+						<h3>Lorem ipsum dolor sit.</h3>
+						<span>By A Name</span>
+						<span>Friday, 6 April 2045 </span>
+						<p>
+							Lorem ipsum dolor sit amet consectetur,
+							adipisicing elit. Exercitationem,
+							obcaecati!.....
+						</p>
+						<a href="#">Read More >></a>
+					</div>
 				</div>
 			</article>
 		</section>
+		<section class="sect-2">
+			<h2>Lorem ipsum dolor sit amet consectetur.</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing
+				elit. Officia laudantium praesentium ut, adipisci
+				velit est?
+			</p>
+
+			<div class="sect-2flex">
+				<article class="sect-2-col1">
+					<div class="sect-2-col-img"></div>
+					<div class="sect-2-coltxt">
+						<h3>
+							Lorem ipsum dolor sit amet, consectetur
+							adipisicing.
+						</h3>
+						<button>Read More >></button>
+					</div>
+				</article>
+				<article class="sect-2-col2">
+					<div class="sect-2-col-img"></div>
+					<div class="sect-2-coltxt">
+						<h3>
+							Lorem ipsum dolor sit amet, consectetur
+							adipisicing.
+						</h3>
+						<button>Read More >></button>
+					</div>
+				</article>
+			</div>
+		</section>
 
 		<section class="sect-3">
-
 			<article class="sect-3-col-1">
 				<h3>Lorem, ipsum dolor.</h3>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui velit repudiandae tempore fugiat dolor nesciunt praesentium amet deserunt quas?</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing
+					elit. Corrupti perferendis neque ipsam voluptates
+					alias? Dolorum vitae, quos fugiat dolorem
+					recusandae quod doloribus porro ea voluptate
+					minima officiis tempore ad aperiam soluta
+					voluptatum? Totam quisquam quia repellat itaque
+					illum quidem officiis, praesentium id expedita
+					sequi dolores laborum, dolore, eveniet amet
+					possimus.
+				</p>
 
-				<address>
-					Street Name & Number,Town, Postcode/Zip
-				</address>
-				<span>+00 (123) 456 7890</span>|
-				<span>INFO@DOMAIN.COM</span>
-
+				<div class="sect-3_contact">
+					<p>Street Name & Number,Town, Postcode/Zip</p>
+					<p>+00 (123) 456 7890</p>
+					<p>INFO@DOMAIN.COM</p>
+				</div>
 			</article>
 
 			<article class="sect-3-col-2">
-
 				<h3>QUICK LINKS</h3>
 
 				<ul class="sect-3-col-2-links">
@@ -176,30 +248,56 @@
 					<li>Portfolio</li>
 					<li>Contact Us</li>
 				</ul>
-				
 			</article>
 
 			<article class="sect-3-col-3">
-
 				<h3>KEEP IN TOUCH</h3>
 
-				<form >
-
-					<input type="email" name="emailid" >
-					<button type="submit">SUBMIT</button>
+				<form>
+					<input type="email" name="emailid" />
 				</form>
-
+				<div>
+					<button type="submit">SUBMIT</button>
+				</div>
 				<div class="sect-3-social">
-                  <img src="images/facebook.gif" alt="facebook icon" width="30" height="30">
-                  <img src="images/pinterest.gif" alt="Pinterest icon" width="30" height="30">
-                  <img src="images/twitter.gif" alt="twitter icon" width="30" height="30">
-                  <img src="images/linkedin.gif" alt="linkedin icon" width="30" height="30">
-                  <img src="images/whatsapp.gif" alt="whatsapp icon" width="30" height="30">
-                  <img src="images/google.gif" alt="google icon" width="30" height="30">
-                </div>
+					<img
+						src="images/facebook.gif"
+						alt="facebook icon"
+						width="30"
+						height="30"
+					/>
+					<img
+						src="images/pinterest.gif"
+						alt="Pinterest icon"
+						width="30"
+						height="30"
+					/>
+					<img
+						src="images/twitter.gif"
+						alt="twitter icon"
+						width="30"
+						height="30"
+					/>
+					<img
+						src="images/linkedin.gif"
+						alt="linkedin icon"
+						width="30"
+						height="30"
+					/>
+					<img
+						src="images/whatsapp.gif"
+						alt="whatsapp icon"
+						width="30"
+						height="30"
+					/>
+					<img
+						src="images/google.gif"
+						alt="google icon"
+						width="30"
+						height="30"
+					/>
+				</div>
 			</article>
-
-
 		</section>
 
 		<footer>
